--- a/styles/game.css
+++ b/styles/game.css
@@ -1,7 +1,7 @@
 #active-game {
     text-align: center;
     margin: 2rem 0 5rem 0; /* 2rem = top, 0 = right, 5rem = bottom, 0 = left*/
-    /*display: none; */
+    display: none;
 }
 
 #game-over {
